--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -8,3 +8,7 @@ commands:
   test:
     description: Testbefehl für Skyblock
     aliases: [t]
+  spawnvillager:
+    description: Testbefehl für Skyblock
+    aliases: [t]
+load: STARTUP
